bambu-macro/rust_hls_macro/tests/fails_on_unknown_arguments.stderr
error: unexpected argument weird_argument
 --> tests/fails_on_unknown_arguments.rs:5:7
  |
5 | #[hls(weird_argument = "")]
  |       ^^^^^^^^^^^^^^^^^^^
